@@ -1,3 +1,7 @@
+2009-07-27  TOMITA Masahiro  <tommy@tmtm.org>
+
+	* lib/mysql.rb, lib/mysql/protocol.rb: performance tuning
+
 2009-07-24  TOMITA Masahiro  <tommy@tmtm.org>
 
 	* lib/mysql.rb: correspond to Ruby 1.9.1.
